lab work for groundedness service

--- a/lab/groundedness_client_for_python/pyproject.toml
+++ b/lab/groundedness_client_for_python/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 azure-identity = "^1.18.0"
+lagom = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
