--- a/lab/groundedness_client_for_python/pyproject.toml
+++ b/lab/groundedness_client_for_python/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 requests = "^2.32.3"
 azure-identity = "^1.18.0"
 lagom = "^2.6.0"
+pytest = "^8.3.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
