making headway on infra for managed identity

--- a/sample.env
+++ b/sample.env
@@ -10,6 +10,11 @@ export ARM_ACCESS_KEY=SECRETxfghAvvsFF9OqWeVNs5zEpWYpvRF15StV1j7Mch93kjRw6F+k12v
 export GROUNDEDNESS_ENDPOINT=https://groundedness-content-safety.cognitiveservices.azure.com/
 export GROUNDEDNESS_API_KEY=SECRET
 
+export AZURE_SUBSCRIPTION_ID=<subscription_id>
+export AZURE_CLIENT_ID=<service_principal_app_id>
+export AZURE_SECRET=<service_principal_password>
+export AZURE_TENANT=<service_principal_tenant_id>
+
 # Create az sp for your subscription in the cloud shell
 
 
