working api with db

--- a/infra/default/modules/front_door_and_dns_timmyreillycom.yml
+++ b/infra/default/modules/front_door_and_dns_timmyreillycom.yml
@@ -116,7 +116,7 @@
     - name: Initialize and apply Terraform configuration
       community.general.terraform:
         project_path: "{{ terraform_dir }}"
-        state: present
+        state: absent
         force_init: false
         init_reconfigure: false
         variables: "{{ terraform_vars }}"
