--- a/lab/backend/pyproject.toml
+++ b/lab/backend/pyproject.toml
@@ -16,6 +16,7 @@ fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
 sqlalchemy = "^2.0.36"
 pydantic = "^2.9.2"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
