--- a/infra/default/modules/hub_and_spoke.yml
+++ b/infra/default/modules/hub_and_spoke.yml
@@ -59,7 +59,7 @@
     - name: Initialize and apply Terraform configuration
       community.general.terraform:
         project_path: "../../terraform/default/firewall_and_route_tables" # "{{ terraform_dir }}"
-        state: present
+        state: absent
         force_init: false
         init_reconfigure: false
         variables: "{{ terraform_vars }}"
