--- a/sample.env
+++ b/sample.env
@@ -17,5 +17,13 @@ export AZURE_TENANT=<service_principal_tenant_id>
 
 # Create az sp for your subscription in the cloud shell
 
+REACT_APP_API_BASE_URL=http://localhost:8000
 
 # az ad sp create-for-rbac --name "default" --role Contributor --scopes /subscriptions/SECRET-63a9754e111a
+
+
+ADMIN_USER=azureuser
+ADMIN_PASSWORD=HelloWorld8!
+
+export ADMIN_USER=azureuser
+export ADMIN_PASSWORD=HelloWorld8!
