--- a/lab/webv1/pyproject.toml
+++ b/lab/webv1/pyproject.toml
@@ -17,6 +17,7 @@ uvicorn = "^0.32.0"
 sqlalchemy = "^2.0.36"
 pydantic = "^2.9.2"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.19"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
